--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "export PORT=80 react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts start",
+    "build": "export PORT=80 react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
