--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
     "classnames": "^2.3.2",
+    "cross-env": "^7.0.3",
     "file-loader": "^6.2.0",
     "gulp-sass": "^5.1.0",
     "mobx": "^6.7.0",
@@ -35,12 +36,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "cross-env PORT=443 react-scripts start",
+    "build": "cross-env PORT=443 react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
