--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cross-env": "^7.0.3",
     "file-loader": "^6.2.0",
     "gulp-sass": "^5.1.0",
+    "jwt-decode": "^4.0.0",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
     "moment": "^2.29.4",
